# BLINDERFIT

./: .env.example  .firebaserc  .gitignore  AI-README.md  AUTH-APPCHECK-TROUBLESHOOTING.md  AUTH-DASHBOARD-FIXES-SUMMARY.md  BlinderfitPRD.txt  CRITICAL-FIXES-SUMMARY.md  DEPLOYMENT-NOTES.md  DEPLOYMENT-TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  DOMAIN-SETUP.md  FIREBASE-CONFIG-UPDATE.md  FIREBASE-FIXES-UPDATE.md  FIREBASE-FIXES.md  FIREBASE-FUNCTIONS-INTERNAL-ERROR.md  FIREBASE-FUNCTIONS-TROUBLESHOOTING.md  FIXES-SUMMARY.md  GENKIT-FIREBASE-SETUP.md  GENKIT-TEST-GUIDE.md  INSTALLATION_TESTING_GUIDE.md  MANUAL-DEPLOYMENT-GUIDE.md  PRODUCTION-CHECKLIST.md  PRODUCTION-DEPLOYMENT.md  README.md  UPDATED-DEPLOYMENT-GUIDE.md  advanced-test-fitmentor.bat  basic-vite.config.js  build-prod.bat  build-prod.js  build-production.bat  cleanup-more-tests.bat  cleanup-tests.bat  cleanup.bat  complete-deploy.bat  create-deploy-package.bat  deploy-and-test-functions.bat  deploy-fixed-version.bat  deploy-functions.bat  deploy-helper.bat  (+68 more)
.firebase/: hosting.ZGlzdA.cache  hosting.ZnJvbnRlbmRcZGlzdA.cache
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt  test_runner.py
backend/app/core/: config.py  database.py
backend/app/middleware/: __init__.py  auth_middleware.py  rate_limit_middleware.py  security_middleware.py
backend/app/models/: __init__.py
backend/app/routes/: __init__.py  ai_chat.py  auth.py  dashboard.py  integrations.py  ml_predictions.py  notifications.py  onboarding.py  plans.py  tracking.py
backend/app/services/: gemini_service.py  integrations_service.py  notification_service.py
backend/app/utils/: __init__.py
backend/tests/: README.md  conftest.py  test_auth.py  test_services.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/public/: fitmentor-console-test.js  function-error-diagnosis.html  function-test.html  testfitmentor.html
frontend/src/: App.tsx  SimpleAuthContext.tsx  index.css  main.tsx
frontend/src/components/: Chatbot.tsx  Layout.tsx  PersonalizedAI.tsx  PhoneInput.tsx  ProfileForm.tsx  ProtectedRoute.tsx  RealTimeInsights.tsx  SplashScreen.tsx
frontend/src/contexts/: AuthContext.tsx  HealthDataContext.tsx
frontend/src/hooks/: use-ai.ts  use-api.ts  use-dynamic-content.ts
frontend/src/lib/: content.ts
frontend/src/pages/: AIAssistant.tsx  About.tsx  Accessibility.tsx  AssessmentGoals.tsx  Careers.tsx  Contact.tsx  CookiePolicy.tsx  CookiesInfo.tsx  FitMentor.tsx  FitnessPlan.tsx  ForgotPassword.tsx  Home.tsx  Index.tsx  Legal.tsx  Login.tsx  MindShift.tsx  MyZone.tsx  News.tsx  NotFound.tsx  PrivacyPolicy.tsx  Profile.tsx  PulseHub.tsx  Register.tsx  ResetPassword.tsx  Tracking.tsx  TribeVibe.tsx
frontend/src/services/: api.ts
frontend/src/utils/: api-config.ts  test-functions.ts
functions/: .env.example  add-test-functions.js  direct-functions-test.js  direct-hello-world-test.js  index.js  index.js.backup  package-lock.json  package.json  test-genkit-debug.js  test-genkit-final.js  test-genkit-fixed.js  test-genkit.js  test-import.js  test-syntax.js  verify-functions.js  verify-packages.js
functions/src/ai/: activity-monitor.js  answer-engine.js  dynamic-content.js  file-processor.js  fitmentor-genkit.js  fitmentor-modern.js  fitness-plan-generator.js  genkit-modern-service.js  genkit-service.js  personalization-engine.js  personalization.js  realtime-personalization.js  streaming-service.js
functions/src/utils/: api-server.js  cors-config.js  firebase-init.js  websocket-service.js
public/: firebase-test-tool.js  minimal-function-test.js  test-fitmentor.js  test.html
scripts/: init-firestore.js  package.json  setup-environment.js  test-fitmentor-api.js  verify-ai-system.js
scripts/firestore/: README.md  backup-data.js  init-database.js  migrate-data.js
scripts/firestore/schemas/: ai-personalization.js  user-interactions.js  user-profile.js
src/: App.css  App.tsx  firebase.ts  index.css  main.tsx
src/components/: Chatbot.tsx  FirebaseTest.tsx  Layout.tsx  PersonalizedAI.tsx  ProfileForm.tsx  ProtectedRoute.tsx  SplashScreen.tsx  SupabaseTest.tsx
src/contexts/: AuthContext.tsx  HealthDataContext.tsx
src/hooks/: use-ai.ts  use-ai.tsx  use-auth.tsx
src/integrations/firebase/: client.ts  db.ts
src/lib/: content.ts  icon-map.tsx
src/pages/: AssessmentGoals.tsx  FitLearn.tsx  FitLearnContent.tsx  FitMentor.tsx  FitnessPlan.tsx  ForgotPassword.tsx  HealthForm.tsx  Home.tsx  Index.tsx  Login.tsx  MindShift.tsx  MyZone.tsx  Profile.tsx  PulseHub.tsx  Register.tsx  ResetPassword.tsx  TribeVibe.tsx
src/services/: FitnessService.ts
src/utils/: api-config.ts  emulator-connection.js  setupSupabase.ts
supabase/: config.toml
(+9 files in other folders)
